<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Lenses Pro</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="locale">MM/dd/yyyy</string>
    <string name="btn_copy">Copy to right lens</string>

    <!-- Novos -->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">No account yet? Create one</string>
    <string name="forget_password">Forgot your password? Reset here</string>
    <string name="signup_error_message">Please make sure you enter a valid email address and password</string>
    <string name="reset_error_message">Please make sure you enter a valid email address</string>
    <string name="signup_error_message_username_already">Email address already taken</string>
    <string name="signup_error_title">Attention</string>
    <string name="signup_message">Please confirm your sign up in your email</string>
    <string name="reset_error_msg">Please make sure you enter a email address</string>
    <string name="login_error_message">Please make sure you enter a valid email address and password</string>
    <string name="login_error_title">Attention</string>
    <string name="login_email_not_confirmed">Please make sure you confirmed your sign up in your email</string>
    <string name="login_fail_message">Please make sure you enter a correct email and password</string>
    <string name="login_poor_connection">Poor connection, log in can be slow. Please wait</string>
    <string name="signup_poor_connection">Poor connection, sign up can be slow. Please wait</string>
    <string name="reset_error_title">Attention</string>
    <string name="reset_button_label">Send</string>
    <string name="logout_label">Logout</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="alrealdy_member">Already a member? Login</string>
    <string name="reset_pswd">An email was successfully sent with reset instructions</string>
    <string name="title_reset_pswd">Reset Password</string>
    <string name="error_reset_pswd">Sorry, a problem occurred to send you a email</string>
    <string name="title_error_reset_pswd">Problem to Reset Password</string>
    <string name="saving">Saving</string>
    <string name="sync">Synchronizing</string>
    <string name="loading">Loading</string>
    <string name="login">Login</string>
    <string name="loggingin">Logging in</string>
    <string name="signup">Sign up</string>
    <string name="signing_up">Signing up</string>
    <string name="sending">Sending email</string>
    <string name="copied">Copied</string>
    <string name="not_connected">Internet is required</string>
    <string name="wait">Wait...</string>

    <!---->

    <string name="nav_status">Status of lenses</string>
    <string name="nav_periodo">Time of lenses</string>
    <string name="nav_dados">Lenses data</string>
    <string name="nav_notificacao">Notification</string>
    <string name="nav_compra">Buy your lenses</string>
    <string name="nav_exit">Exit</string>

    <string name="title_status">Status</string>
    <string name="title_periodo">Time</string>
    <string name="title_dados">Data</string>

    <string name="lblQtd">Total amount of lenses:</string>
    <string name="lbl_bc">BC</string>
    <string name="lbl_dia">DIA</string>
    <string name="btn_horario">12:00</string>

    <string name="menuSave">Save</string>
    <string name="menuEdit">Edit</string>
    <string name="menuInsert">Insert</string>
    <string name="menuDelete">Delete</string>
    <string name="menuAlarm">Set Reminder</string>
    <string name="menuCancel">Cancel</string>
    <string name="menuLenses">Lenses Data</string>
    <string name="menuHistory">History</string>
    <string name="menuShare">Share</string>
    <string name="menuBuy">Buy your lenses</string>
    <string name="menuHelp">Help</string>
    <string name="leftEye">Left Eye (OS)</string>
    <string name="rightEye">Right Eye (OD)</string>
    <string name="dateLeftEye">Start Date Wearing:</string>
    <string name="dateRightEye">Start Date Wearing:</string>
    <string name="tabDays">Days remaining</string>
    <string name="tabLens">Time Lenses</string>
    <string name="tabLeftLens">Left Lens</string>
    <string name="tabRightLens">Right Lens</string>
    <string name="btnDatePicker">Pick date</string>
    <string name="lblMonths">Replacement time:</string>
    <string name="service_name">Replace lens</string>
    <string name="service_daily_name">Wearing lens?</string>
    <string name="msgCancelEdit">Editing canceled</string>
    <string name="msgSaved">Saved</string>
    <string name="msgNotificationChangeLens">My Lenses</string>
    <string name="msgNotificationTitle">Time to replace your lenses</string>
    <string name="msgNotificationLeftEye">Replace your left lens</string>
    <string name="msgNotificationRightEye">Replace your right lens</string>
    <string name="msgNotificationBothEyes">Replace your contact lenses</string>
    <string name="msgDelete">Are you sure you want delete?</string>
    <string name="msgDeleteAllHistory">Are you sure you want delete all history?</string>
    <string name="msg_no_items_to_display">No items to display</string>
    <string name="msg_insert_time_replace">Insert a time to lenses</string>
    <string name="msg_must_have_history">A record was created. There are data of your lenses.</string>
    <string name="msg_no_buy_site">Shopping site not specified in Lenses Data.\nDo you want to open a browser anyway?</string>
    <string name="msg_cancel_notification">Do not notify in next days</string>
    <string name="msg_press_once_again_to_exit">Press once again to exit</string>
    <string name="msg_are_you_wearing_today">Are you wearing today?</string>
    <string name="msg_select_which_lens">Select one option below</string>
    <string name="msg_insert_time_of_lenses">Please, insert Time for Lenses</string>
    <string name="msg_units">The units are calculated according to the initial date of \"Lenses Data\" and the dates of \"Time of Lenses\".\nPlease set the start date in \"Lenses Data\" less than or equal to the lenses you want to start.</string>
    <string name="title_activity_alarm">Notification</string>
    <string name="title_activity_lenses">Data</string>
    <string name="title_number_picker_days_not_used">Days I have not worn</string>
    <string name="str_set_time_alarm">Set time reminder</string>
    <string name="str_days_remaining">Days remaining</string>
    <string name="str_day_remaining">Day remaining</string>
    <string name="str_date_change">Date to change</string>
    <string name="str_time_to_replace">Time to replace</string>
    <string name="str_day_expired">Day expired</string>
    <string name="str_days_expired">Days expired</string>
    <string name="str_days_before">Remind me days before</string>
    <string name="str_date_history">Date:</string>
    <string name="str_unit_remaining">Unit remaining</string>
    <string name="str_units_remaining">Units remaining</string>
    <string name="str_left">Left</string>
    <string name="str_right">Right</string>
    <string name="str_both">Both</string>
    <string name="str_email_subject">History of My Lenses</string>
    <string name="str_email_subject_data_lenses">My Lenses Data</string>
    <string name="str_share_via">Share via</string>
    <string name="str_history_date">DATE:</string>
    <string name="str_in_use">Wearing</string>
    <string name="str_remind_every_day">Remind me every day if I\'m wearing</string>
    <string name="str_days_not_used">Days not worn</string>
    <string name="str_day_not_used">Day not worn</string>
    <string name="str_count_unit">Count unit</string>
    <string name="lbl_brand">Manufacturer</string>
    <string name="lbl_desc_lens">Name of lens/brand</string>
    <string name="lbl_power">Sphere Power</string>
    <string name="lbl_cylinder">Cylinder</string>
    <string name="lbl_axis">Axis</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_type_lens">Type of lens</string>
    <string name="lbl_date_ini_wear">Start date of lens *Important to count remaining units</string>
    <string name="lbl_date_ini_wear2">Start date of lens</string>
    <string name="lbl_number_units">Number of units</string>
    <string name="lbl_buy_site">Shopping lenses site</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="title_activity_history">History</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_time_lens">Time</string>
    <string name="title_activity_list_time_lens">Time of lenses</string>
    <string name="title_activity_days">Status of lenses</string>

</resources>